<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminEventListActivity">

    <TextView
        android:id="@+id/event_list_loading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading_text"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/admin_event_list_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <SearchView
            android:id="@+id/admin_event_list_search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:iconifiedByDefault="false"
            android:queryHint="Event title"
            android:searchIcon="@drawable/ic_white_search" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/sort_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_by_text"
                android:textColor="#A9FFFFFF" />

            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/date_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_date_default"
                android:textColor="#A9FFFFFF" />

            <TextView
                android:id="@+id/date_sort_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/date_sort_icon_text"
                android:textColor="#A9FFFFFF" />

            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/title_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_title_default"
                android:textColor="#A9FFFFFF" />

            <TextView
                android:id="@+id/title_sort_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/title_sort_icon_text"
                android:textColor="#A9FFFFFF" />

            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/cost_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_cost_default"
                android:textColor="#A9FFFFFF" />

            <TextView
                android:id="@+id/cost_sort_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/cost_sort_icon_text"
                android:textColor="#A9FFFFFF" />
        </LinearLayout>

        <ListView
            android:id="@+id/admin_event_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <!--            android:visibility="visible" -->
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>